--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,39 @@
-@import "body.css";
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-brand {
+  font-family: Marker Felt, fantasy;
+}
+
+#logo {
+  width: 30px;
+  height: 24px;
+}
+
+#run {
+  width: 100%;
+  height: 300px;
+}
+
+footer {
+  background-color: dimgrey;
+  font-family: Marker Felt, fantasy;
+}
+
+#sponsorLogo {
+  width: 50px;
+  height: 50px;
+}
+
+.sponsor {
+  color: black;
+}
+
+#contact {
+  color: black;
+  -webkit-text-decoration-style: none;
+          text-decoration-style: none;
+}
+/*# sourceMappingURL=styles.css.map */
