--- a/css/sass/_variable.sass
+++ b/css/sass/_variable.sass
@@ -1,1 +1,3 @@
-$fontFamily : Marker Felt, fantasy
+$fontFamilyNavbarFooter : Marker Felt, fantasy
+$blackColor : black
+$fontFamilyMain :  'Raleway', sans-serif
