--- a/css/styles.sass
+++ b/css/styles.sass
@@ -6,3 +6,5 @@
 @import 'sass/_footer.sass'
 @import 'sass/_sponsor.sass'
 @import 'sass/_contact.sass'
+@import 'sass/_main.sass'
+@import 'sass/_article.sass'
