--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,30 @@
+@charset "UTF-8";
 body {
   margin: 0;
   padding: 0;
 }
 
-.navbar-brand {
+.navbar {
   font-family: Marker Felt, fantasy;
+}
+
+@media screen and (max-width: 404px) {
+  .contact {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 326px) {
+  .event {
+    text-indent: -9999px;
+    line-height: 0;
+  }
+  .event::after {
+    content: "à venir";
+    text-indent: 0;
+    display: block;
+    line-height: initial;
+  }
 }
 
 #logo {
@@ -35,5 +55,27 @@ footer {
   color: black;
   -webkit-text-decoration-style: none;
           text-decoration-style: none;
+}
+
+main {
+  font-family: "Raleway", sans-serif;
+  margin: 20px;
+}
+
+@media screen and (min-width: 769px) {
+  article {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  section {
+    margin: 20px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  iframe {
+    display: none;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
