--- a/css/sass/_navbar.sass
+++ b/css/sass/_navbar.sass
@@ -14,6 +14,11 @@
       text-indent: 0
       display: block
       line-height : initial
+  @media screen and(max-width:232px) 
+    display: none
+    
+  
+  
 
     
   
