--- a/css/styles.sass
+++ b/css/styles.sass
@@ -1,11 +1,14 @@
-@import 'sass/_variable.sass'
-@import 'sass/_body.sass'
-@import 'sass/_navbar.sass'
-@import 'sass/_logo.sass'
-@import 'sass/_run.sass'
-@import 'sass/_footer.sass'
-@import 'sass/_sponsor.sass'
-@import 'sass/_contact.sass'
-@import 'sass/_main.sass'
-@import 'sass/_article.sass'
-@import 'sass/_queries'
+@import 'sass/general/_variable.sass'
+
+@import 'sass/layout/_reset.sass'
+@import 'sass/layout/_main.sass'
+@import 'sass/layout/_section.sass'
+@import 'sass/layout/_footer.sass'
+
+@import 'sass/components/_navbar.sass'
+@import 'sass/components/_logo.sass'
+@import 'sass/components/_run.sass'
+@import 'sass/components/_sponsor.sass'
+@import 'sass/components/_contact.sass'
+
+@import 'sass/general/_queries'
