--- a/css/styles.sass
+++ b/css/styles.sass
@@ -10,5 +10,8 @@
 @import 'sass/components/_run.sass'
 @import 'sass/components/_sponsor.sass'
 @import 'sass/components/_contact.sass'
+@import 'sass/components/_newsDate.sass'
+@import 'sass/components/_day.sass'
+@import 'sass/components/_card.sass'
 
 @import 'sass/general/_queries'
