--- a/css/styles.sass
+++ b/css/styles.sass
@@ -13,5 +13,6 @@
 @import 'sass/components/_newsDate.sass'
 @import 'sass/components/_day.sass'
 @import 'sass/components/_card.sass'
+@import 'sass/components/_imageEvent.sass'
 
 @import 'sass/general/_queries'
